# quad

./: CMakeLists.txt  EigenQP.cpp  EigenQP.h  Quad.cpp  Quad.h  Quad.kdev4  controller.cpp  controller.h  controllooper.cpp  controllooper.h  eiquadprog.h  globals.cpp  globals.h  glquad.cpp  glquad.h  highercontroller.cpp  highercontroller.h  imu.cpp  imu.h  interceptplot.cpp  interceptplot.h  interface.cpp  interface.h  interface.ui  linearplanner.cpp  linearplanner.h  linearplanner3d.cpp  linearplanner3d.h  linearplannermono.cpp  linearplannermono.h  main.cpp  memsimu.cpp  memsimu.h  mpc.cpp  mpc.h  observer.cpp  observer.h  onlinelearner.cpp  onlinelearner.h  path.h  (+29 more)
hw/: adxl345.cpp  adxl345.h  hmc5883.cpp  hmc5883.h  i2c.cpp  i2c.h  itg3200.cpp  itg3200.h  pca9685.cpp  pca9685.h  raspberryi2c.cpp  raspberryi2c.h  uart.cpp  uart.h
